feat(api): migrate Products and FiscalMovements APIs from JDBC to JPA Refactored Products and FiscalMovements persistence layers to use JPA/Hibernate instead of JDBC
Improved maintainability with entity mappings, repositories, and ORM-based queries

Removed manual SQL handling, reducing boilerplate and potential errors

Aligned with clean architecture principles and domain-driven design practices

Prepared foundation for future optimizations: caching, pagination, and advanced queries

Ensures consistency with other JPA-based modules for seamless integration